# rcps-3dprint

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
data_example/: packing.nfo  packing.xyzd
examples/: README.md  config_50mm_d6_phi035.yaml
matlab/: RCPS_v5.m  README.md
matlab/legacy/: RCPS_v4.m  mesh_from_raw.py
notebooks/: .gitkeep  packing_generation.ipynb
rcps/: __init__.py  _version.py  bridges.py  cli.py  config.py  facility.py  field.py  io.py  mesh.py  metrics.py  pipeline.py
rcps_gui/: __init__.py  jobs.py  meshjob.py  packgen.py  server.py
rcps_gui/static/: app.js  index.html  style.css
tests/: _mesh_metrics.py  conftest.py  test_bridges.py  test_cli.py  test_config.py  test_facility.py  test_field.py  test_gui.py  test_io.py  test_mesh.py  test_metrics.py  test_pipeline.py  test_pipeline_e2e.py
tests/fixtures/: .gitkeep  README.md  generate_reference.m
