[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rcps-3dprint"
dynamic = ["version"]
description = "Reproducible random close-packed sphere lattices for 3D-printable porous-media experiments."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Vlad Giurgiu", email = "vladgiurgiubv@me.com" },
]
keywords = [
  "porous-media",
  "sphere-packing",
  "3d-printing",
  "additive-manufacturing",
  "permeability",
  "darcy-flow",
  "horton-rogers-lapwood",
  "iso2mesh",
  "signed-distance-field",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "trimesh>=4.0",
  "lxml>=4.9",
  "iso2mesh>=0.5",
  "pymeshfix>=0.16",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "mypy>=1.7",
]
viz = [
  "pyvista>=0.43",
  "matplotlib>=3.8",
]
skimage = [
  "scikit-image>=0.22",
]

[project.scripts]
rcps-build = "rcps.cli:build_main"
rcps-facility = "rcps.cli:facility_main"
rcps-gui = "rcps_gui.server:main"

[project.urls]
Homepage = "https://github.com/VladGiurgiu0/rcps-3dprint"
Repository = "https://github.com/VladGiurgiu0/rcps-3dprint"
Issues = "https://github.com/VladGiurgiu0/rcps-3dprint/issues"

[tool.hatch.version]
path = "rcps/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["rcps", "rcps_gui"]

[tool.hatch.build.targets.sdist]
include = [
  "rcps/",
  "examples/",
  "notebooks/",
  "tests/",
  "docs/",
  "README.md",
  "LICENSE",
  "NOTICE",
  "CITATION.cff",
  "pyproject.toml",
]
exclude = [
  "matlab/",
  "notebooks/",
  "data_example/",
  "*.png",
  ".DS_Store",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "matlab_reference: requires a MATLAB-produced reference .3mf in tests/fixtures/",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "NPY",  # numpy-specific rules
]
ignore = [
  "E501",  # line-too-long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
